--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
+
   </head>
   <body>
     <main>
       <div class="mainCard">
-        <div class="title"><img src="./assets/rocket.svg" /></div>
+        <div class="title"><img src="./assets/rocket.svg" alt="logo rocket"/></div>
         <div>
           <form action="">
             <input
@@ -43,8 +44,16 @@
             </div>
             <i class="fas fa-trash-alt trashIcon icon"></i>
           </li>
+            <li class="card">
+              <div>
+                <i class="far fa-check-square icon"></i>
+                <span class="task">Hacer curso de Git</span>
+              </div>
+            <i class="fas fa-trash-alt trashIcon icon"></i>
+          </li>
         </ul>
       </div>
     </main>
+    
   </body>
 </html>
