--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
               name="task"
               placeholder="Nombre de la tarea"
               class="inputForm"
-              autocomplete="off" data-form-input
-            />
+              autocomplete="off" data-form-input />
             <button type="submit" class="btnCreate" data-form-btn>
               Agregar <i class="fas fa-plus-circle"></i>
             </button>
@@ -41,6 +40,6 @@
         </ul>
       </div>
     </main>
-    <script src="script.js"> </script>
+    <script type="module" src="script.js"> </script>
   </body>
 </html>
